[tool.poetry]
name = "renderctl"
version = "0.1.0"
description = "Render CLI"
authors = ["michaelnapoloen <michael.napoleon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
requests = "^2.28.1"
rich = "^12.5.1"
nox = "^2022.8.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = {extras = ["toml"], version = "^6.4.4"}
pytest-cov = "^3.0.0"
pytest-mock = "^3.8.2"

[tool.poetry.scripts]
renderctl="renderctl.console:cli"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
responses = "^0.22.0"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["renderctl"]

[tool.coverage.report]
show_missing = true
fail_under = 40

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
